Add git pull in deploy script

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ theme = "timer-hugo"
 [menu]
     # Navbar Menus
     [[menu.nav]]
-        name    = "Contact us"
+        name    = "Contact Bigblank"
         url     = "/contact"
         weight  = 2
     #[[menu.nav]]
